monopyly/static/css/style.css
/* ... */
#homepage-panels {
	display: flex;
	justify-content: space-between;
	width: 100%;
}

.panel {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	margin: 25px;
	padding: 50px;
	background-color: #f6f6f6;
	border-radius: 15px;
}

.panel h2 {
	margin-top: 0;
}

#bank.panel,
#investments.panel {
	justify-content: center;
}

#bank.panel h2,
#investments.panel h2 {
	color: #bbbbbb;
}

#bank.panel {
}


/*
 * Customization for the 'About' page
 */
#about {
	width: 75%;
	margin: auto;
	text-align: justify;
}

#about .signature {
	margin-bottom: 100px;
	text-align: right;
	font-weight: bold;
	font-style: oblique;
}


/*
 * Customization for the 'Cards' page
 */
#cards-container {
	display: flex;
	flex-wrap: wrap;
	width: 420px;
	margin: auto;
}
@media screen and (min-width: 1040px) {
	#cards-container {
		width: 840px;
	}
}
@media screen and (min-width: 1460px) {
	#cards-container {
		width: 1260px;
	}
}
@media screen and (min-width: 1880px) {
	#cards-container {
		width: 1680px;
	}
}

.credit-card-block {
	position: relative;
	width: 400px;
	margin: 10px;
	color: inherit;
}

.credit-card-block .card-background {
	width: 100%;
}

.credit-card-block .card-number {
	position: absolute;
	top: 160px;
	left: 50px;
	font-family: "Courier New", Courier, monospace;
	font-size: 20pt;
}


/*
 * Customization for the 'Card Details' page
 */
#card-details {
	width: 50%;
	margin: 20px auto;
}

#card-info {
	width: 100%;
	border-collapse: collapse;
}

#card-details th,
#card-details td {
	padding: 5px 10px;
	vertical-align: top;
}

#card-details th {
	text-align: right;
}

#card-details td {
	text-align: left;
}


/*
 * Customization for the 'New Card' & 'Update Card' pages
 */
form#card #bank {
	flex-basis: 70%;
	min-width: 320px;
}

form#card #last-four-digits {
	flex-basis: 30%;
	min-width: 160px;
}

form#card #statement-issue-day {
	flex-basis: 40%;
	min-width: 180px;
}

form#card #statement-due-day {
	flex-basis: 40%;
	min-width: 180px;
}

form#card #active {
	flex-basis: 20%;
	min-width: 100px;
}

form#card #submit {
	min-width: 490px;
}


/*
 * Customization for the 'Statements' page
 */
#statements-container {
	display: flex;
	justify-content: space-around;
}

#statements-container .card-column {
  display: flex;
  flex-direction: column;
	height: min-content;
	margin: 15px 10px;
	padding: 20px;
  background-color: #e5fbd8;
  border-radius: 15px;
	text-align: center;
	text-transform: uppercase;
}

#statements-container .card-column .digits {
	color: #888888;
}

.statement-block {
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 275px;
	margin: 10px;
	padding: 45px 50px;
  background-color: #eeeeee;
	background-image: linear-gradient(#eeeeee, #e6e6e6);
	border: 2px solid #dddddd;
  border-radius: 10px;
	color: inherit;
	text-decoration: none;
}


.statement-block:hover {
	filter: brightness(0.98);
}

.statement-block .date,
.statement-block .payment {
  display: flex;
	flex-direction: column;
	align-items: center;
}

.statement-block .date .month {
	font-size: 22pt;
  letter-spacing: -1px;
}

.statement-block .date .year {
	font-size: 16pt;
  letter-spacing: 1px;
}

.statement-block .payment .total {
	font-size: 30pt;
	font-weight: bold;
}

.statement-block .payment .paid-notice {
	font-size: 10pt;
}

/*
 * Customization for the 'Statement Details' page
 */
#statement-details {
	display: flex;
	justify-content: space-around;
	padding-top: 10px;
}

#statement-details #statement-info {
	display: flex;
	flex-direction: column;
	padding: 0 50px;
}

#statement-details #statement-info #card {
	margin-bottom: 10px;
	color: #888888;
}

#statement-details #statement-info #issue-date {
	font-size: 28pt;
}

#statement-details #statement-info #total {
	display: flex;
	justify-content: space-between;
	margin: 20px 0;
	text-align: center;
	font-size: 72pt;
	font-weight: bold;
	letter-spacing: 1px;
}

#statement-details #statement-info #payment {
	width: 100%;
	font-size: 12pt;
}

#statement-details #statement-info #due {
	float: left;
	display: flex;
	width: 175px;
}

#statement-details #statement-info #due .date {
	width: 100px;
	margin-left: 5px;
	margin-top: -1px;
	padding-left: 5px;
	border: 1px solid transparent;
	font-weight: bold;
	letter-spacing: 1px;
}

#statement-details #statement-info #due #edit-due-date {
	display: none;
	margin-top: -2px;
	margin-bottom: -1px;
	border: 1px solid #cccccc;
}

#statement-details #statement-info #due #edit-due-date-icon {
	height: 20px;
	width: 20px;
	margin-left: 10px;
	cursor: pointer;
	visibility: hidden;
}

#statement-details #statement-info #due:hover #edit-due-date-icon {
	visibility: visible;
}

#statement-details #statement-info #paid {
	float: right;
}

form#pay {
	clear: left;
	position: relative;
	width: 80%;
	margin: 100px auto;
}

form#pay button,
form#pay input {
	height: 50px;
	margin: 0;
	border: none;
	border-radius: 5px;
}

form#pay #make-payment {
	position: absolute;
	left: 0;
	background-color: green;
	background-image: linear-gradient(90deg, #85bb65, #73a457);
	color: white;
	transition: 0.1s;
}

form#pay #make-payment[type="submit"] {
	left: 80%;
	width: 20%;
	padding: 0;
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}

form#pay #make-payment[type="submit"] #prompt {
	display: none;
}

form#pay #make-payment[type="button"] .button-icon {
	display: none;
}

form#pay #pay-date {
	width: 80%;
	box-sizing: border-box;
	border: 1px solid #cccccc;
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
}

#statement-details table#statement-transactions {
	width: 50%;
}


/*
 * Customization for the 'Transactions' page
 */
table#transactions {
	width: 100%;
	margin: 0 auto;
}


/*
 * Customization for the 'Transaction Details' page
 */
#transaction-details {
	width: 50%;
	margin: 20px auto;
}

#transaction-info {
	width: 100%;
	border-collapse: collapse;
}

#transaction-info th,
#transaction-info td {
	padding: 5px 10px;
	vertical-align: top;
}

#transaction-info th {
	text-align: right;
}
/* ... */

